--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -364,3 +364,21 @@ a{
   font-family: "Lato";
   font-weight: 400;
 }
+.exercise-question{
+  font-size: 17px;
+  font-weight: 600;
+}
+.exercsie-option{
+  opacity: 1;
+  background-color: rgb(255, 255, 255);
+  background-size: cover;
+  background-attachment: scroll;
+  background-repeat: repeat;
+  background-position: left top;
+  border-radius: 50px;
+  border-left: 1px solid rgb(171, 184, 212);
+  border-right: 1px solid rgb(171, 184, 212);
+  border-top: 1px solid rgb(171, 184, 212);
+  border-bottom: 1px solid rgb(171, 184, 212);
+  box-shadow: none;
+}
