--- a/public/front_assets/css/custom.css
+++ b/public/front_assets/css/custom.css
@@ -192,3 +192,18 @@ a{
   flex-direction: row!important;
   border-radius: 0.25rem;
 }
+.view-pic-text{
+  color: #0b7cfe;
+  font-family: "Lato";
+  font-weight: 700;
+  text-align: center;
+  font-size: 17px;
+  line-height: 20px;
+}
+.lesson-img{
+  width: 366px;
+  height: 245px;
+}
+.speeker-img{
+  height: 60px;
+}
