--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -334,7 +334,7 @@ a{
 .mobile-footer-nav {
   position: fixed !important;
   width: 100%;
-
+}
 .view-pic-text{
   color: #0b7cfe;
   font-family: "Lato";
