--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -428,3 +428,26 @@ a{
   font-weight: bold;
   color: #161823;
 }
+.congrats-btn{
+  opacity: 1;
+  background-color: rgb(20, 230, 140);
+  background-size: cover;
+  background-attachment: scroll;
+  background-repeat: repeat;
+  background-position: left top;
+  border-radius: 100px;
+  border-left: 1px solid rgb(22, 24, 35);
+  border-right: 1px solid rgb(22, 24, 35);
+  border-top: 1px solid rgb(22, 24, 35);
+  border-bottom: 1px solid rgb(22, 24, 35);
+  box-shadow: none;
+  color: #000000;
+  width: 208px;
+  height: 50px;
+  padding: 10px;
+}
+.congrats-btn:hover{
+  background-color: rgb(20, 230, 140);
+  border: 1px solid rgb(22, 24, 35);
+  color: #000000;
+}
