--- a/resources/css/login-page/css/stylee.css
+++ b/resources/css/login-page/css/stylee.css
@@ -16330,3 +16330,56 @@ ul {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
+
+/* Reset Button */
+.reset-btn {
+  position: absolute;
+  bottom: 32px;
+  right: 32px;
+  border-radius: 100%;
+  background-color: rgb(0, 131, 255);
+  padding: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, .3);
+}
+
+.reset-btn img {
+  border-radius: 100%;
+  height: 36px;
+  width: 36px;
+}
+
+/*-------------------Start: ImageContent Component----------- */
+.image-content {
+  border-radius: 16px;
+  border: 1px solid #adb8ce;
+  box-shadow: 0px 0px 1px rgb(0, 0, 0, .5);
+}
+
+.image-content .image {
+  width: 100%;
+  overflow: hidden;
+  border-radius: 16px;
+}
+
+.image-content .image img {
+  border-radius: 16px;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+.image-content.has-text .image, .image-content.has-text .image img {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.image-content .text {
+  padding: 8px 12px;
+  text-align: center;
+  color: black;
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+/*-------------------End: ImageContent Component----------- */
