make image responsive

--- a/resources/css/login-page/css/stylee.css
+++ b/resources/css/login-page/css/stylee.css
@@ -16366,6 +16366,8 @@ ul {
   border-radius: 16px;
   min-width: 100%;
   min-height: 100%;
+  max-width: none;
+  max-height: none;
   width: auto;
   height: auto;
 }
