--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -536,8 +536,9 @@ a{
   padding: 0.3rem 1.37rem;
 }
 .lesson-progress .knowledge-level .percentage .symbol {
-  font-size: 20px;
+  font-size: 21px;
   line-height: 21px;
   margin-left: 2px;
+  font-weight: 700;
 }
 /*====================== END: Lesson Progress =======================*/
