--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -554,6 +554,12 @@ a{
 .content {
   padding-top: 3rem;
 }
+
+.divider {
+  background-color: rgb(240, 240, 245);
+  width: 100%;
+  height: 1px;
+}
 /*====================== END: Page Layout =======================*/
 
 
