--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -567,6 +567,7 @@ a{
 .lesson-menu ul {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .lesson-menu ul li {
@@ -585,6 +586,7 @@ a{
 
 .lesson-menu ul li a img {
   margin-right: 1rem;
+  height: auto;
 }
 
 
