--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -613,7 +613,7 @@ a{
   color: #b3b3b3;
   font-size: 16px;
   line-height: 19px;
-  margin-bottom: 1.12rem;
+  margin-bottom: 2rem;
 }
 
 .level-select select {
@@ -634,3 +634,31 @@ a{
   background-position-y: 55%;
 }
 /*====================== END: Level Select =======================*/
+
+/*====================== START: Menu =======================*/
+.menu {
+  padding-top: 2rem;
+}
+
+.menu ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.menu ul li {
+  height: auto;
+  margin-bottom: 1.3rem;
+}
+
+.menu ul li a {
+  color: #161823;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 600;
+}
+
+.menu ul li a img {
+  margin-right: 0.7rem;
+}
+/*====================== END: Menu =======================*/
