--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -668,68 +668,6 @@ a{
   margin-right: 0.7rem;
 }
 /*====================== END: Menu =======================*/
-
-
-/*====================== START: Lesson Preview =======================*/
-.lesson-preview {
-  padding-top: 1.5rem;
-  padding-bottom: 1.375rem;
-  border-bottom: 1px solid rgb(240, 240, 245);
-}
-
-.lesson-preview .details {
-  display: flex;
-  margin-bottom: 0.75rem;
-}
-
-.lesson-preview .details .sec:not(:last-child) {
-  margin-right: 0.9rem;
-}
-
-.lesson-preview .details .image {
-  width: 70px;
-  height: 70px;
-  border-radius: 100%;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.lesson-preview .details .image img {
-  width: 100%;
-  height: auto;
-  min-width: 100%;
-  min-height: 100%;
-}
-
-.lesson-preview .details .title {
-  flex-grow: 1;
-  padding: 6px 0;
-}
-
-.lesson-preview .details .title h2 {
-  color: #161823;
-  font-size: 24px;
-  line-height: 28px;
-  margin: 0;
-  margin-bottom: 0.375rem;
-}
-
-.lesson-preview .details .title > span {
-  color: #b3b3b3;
-  font-size: 16px;
-  line-height: 19px;
-}
-
-.lesson-preview .overview {
-  color: #161823;
-  font-size: 17px;
-  line-height: 20px;
-}
-/*====================== END: Lesson Preview =======================*/
-
-
 .heading{
   font-size: 26px;
   line-height: 31px;
@@ -756,7 +694,7 @@ a{
 .price-heading{
   font-size: 30px;
   line-height: 36px;
-  font-weight: 600;
+  font-weight: 700;
 }
 .price-list-item div{
   padding: 10px;
@@ -766,7 +704,6 @@ a{
 .price-footer .first-span{
   font-size: 18px;
   line-height: 21px;
-  font-family: "Lato";
   font-weight:  900;
   color: #161823;
 }
@@ -856,4 +793,11 @@ a{
   border-bottom: 1px solid #80808069;
   height: 55px;
   padding-top: 13px;
+  position: relative;
+}
+.footerContact{
+  top: 284px;
+}
+.footerPrice{
+  padding-top: 47px;
 }
