--- a/resources/css/listing/custom.css
+++ b/resources/css/listing/custom.css
@@ -880,3 +880,22 @@ a{
 .contactFooter{
   top:285px;
 }
+.priceFooter{
+  top:90px;
+}
+@media (max-width:768px)  {
+  .price-list-item div{
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 15px;
+    font-size: 16px;
+    line-height: 19px;
+    padding-right:0;
+  }
+  .price-list-item div img {
+    height: 53px;
+  }
+  .price-list-text{
+    font-size: 21px;
+  }
+}
